<resources>
    <string name="app_name">EGT MARGIN CALCULATOR</string>
    <string name="action_settings">Settings</string>
    <string name="message_start">EGTM Calculator</string>
    <string name="ESN_detail">000000</string>
    <string name="ESN_detail_text">%s</string>
    <string name="thrust">Thrust(k)</string>
    <string name="ESN">ESN</string>
    <string name="thrust_result"></string>
    <string name="EGTM">EGTM</string>
    <string name="EGTM_result"></string>
    <string name="Update">UPDATE</string>
    <string name="reset_button">RESET</string>
    <string name="WEGTM">EGTM(Worst Case)</string>
    <string name="WEGTM_result"></string>
    <string name="EngineModel">Engine Model</string>
    <string name="EngineDesignation">Engine Designation</string>
    <string name="CurrentEGT">Current EGT</string>
    <string name="TimeSinceLastSV">Time Since Last Shop Visit</string>
    <string name="TimeSinceNew">Time Since New</string>
    <string name="CyclesSinceNew">Cycles Since New</string>
    <string name="Submit">Submit</string>
    <string name="Cancel">Cancel</string>
    <string name="Hours">Hours</string>
    <string name="title_activity_egtmargin_detail">EGTMarginDetailActivity</string>
    <string name="action_delete">delete</string>
    <string name="submit">Submit</string>
    <string name="shopvist_Year_result"></string>
    <string name="Cycles_remaining_result"></string>


</resources>
