<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="6dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ESN" />
    <EditText
        android:id="@+id/esn_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="ESN"
        android:inputType="textCapSentences" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EngineModel" />


    <Spinner
        android:id="@+id/engine_model_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EngineDesignation" />


    <Spinner
        android:id="@+id/engine_designation_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CurrentEGT" />
    <EditText
        android:id="@+id/current_egt_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="0"
        android:inputType="number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TimeSinceLastSV" />
    <EditText
        android:id="@+id/time_since_last_sv_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Hours"
        android:inputType="number" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TimeSinceNew" />
    <EditText
        android:id="@+id/time_since_new_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Hours"
        android:inputType="number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CyclesSinceNew" />
    <EditText
        android:id="@+id/cycles_since_new_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="0"
        android:inputType="number" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:padding="6dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


    </LinearLayout>
</LinearLayout>

